# summit_xl_mico_common

./: README.md
summit_xl_mico_3fg_moveit/: .setup_assistant  CMakeLists.txt  package.xml
summit_xl_mico_3fg_moveit/config/: summit_xl_mico.srdf
summit_xl_mico_3fg_moveit/launch/: default_warehouse_db.launch  demo.launch  demo_rtc.launch  fake_moveit_controller_manager.launch.xml  move_group.launch  move_group_rtc.launch  moveit.rviz  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  summit_xl_mico_moveit_controller_manager.launch  trajectory_execution.launch  trajectory_execution.launch.xml  warehouse.launch
summit_xl_mico_common/: CMakeLists.txt  package.xml
summit_xl_mico_description/launch/: summit_xl_mico_3fg_rviz.launch  summit_xl_mico_3fg_state_robot.launch
summit_xl_mico_description/robots/: summit_xl_mico.urdf.xacro  summit_xl_mico_3fg.urdf.xacro
summit_xl_mico_moveit/launch/: move_group_rtc.launch  moveit.rviz
